# clark-semantic-memory

./: .gitignore  README.md  pyproject.toml  test_clark_memory.py
clark_semantic_memory/: __init__.py  cli.py  memory.py
